# cumbucks

./: .gitignore  Cargo.toml  README.md  Trunk.toml  cumbucks-2054c95197c9a528.js  cumbucks-2054c95197c9a528_bg.wasm  cumbucks-2eab86edf0d03ce3.js  cumbucks-2eab86edf0d03ce3_bg.wasm  cumbucks-3754ede2d9d90936.js  cumbucks-3754ede2d9d90936_bg.wasm  cumbucks-3f52ebf87c26ddd4.js  cumbucks-3f52ebf87c26ddd4_bg.wasm  cumbucks-78cc57e5faae5836.js  cumbucks-78cc57e5faae5836_bg.wasm  cumbucks-85bf4207098e8002.js  cumbucks-85bf4207098e8002_bg.wasm  cumbucks-b9d935dfb5e7866d.js  cumbucks-b9d935dfb5e7866d_bg.wasm  cumbucks-cb3e611aa33d43ad.js  cumbucks-cb3e611aa33d43ad_bg.wasm  cumbucks-e7de29db889dbc66.js  cumbucks-e7de29db889dbc66_bg.wasm  cumbucks-f9c1a20f806392c.js  cumbucks-f9c1a20f806392c_bg.wasm  index.html  style-3f5815e82109532f.css  style-d56679dec3e85bcd.css  style.css  time-for-socks-app-27f14cabe9cd079f.js  time-for-socks-app-27f14cabe9cd079f_bg.wasm  time-for-socks-app-549ac23cb9f429b.js  time-for-socks-app-549ac23cb9f429b_bg.wasm  time-for-socks-app-a2bc9f2cf63ea85a.js  time-for-socks-app-a2bc9f2cf63ea85a_bg.wasm  time-for-socks-app-beda5415b40da03e.js  time-for-socks-app-beda5415b40da03e_bg.wasm  time-for-socks-app-eb1a767d11e8a118.js  time-for-socks-app-eb1a767d11e8a118_bg.wasm  trunk-gh-fixer.py
.github/workflows/: deploy.yml
src/: instructions.rs  log_in_out.rs  main.rs  menu.rs  plan.rs  settings.rs  store.rs  unbox.rs
src-tauri/: Cargo.toml  tauri.conf.json
