[package]
name = "cumbucks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = {version = "0.20.0", features = ["csr"]}
gloo = "0.8.0"
getrandom = {version = "0.2.8", features = ["js"]}
rand = "0.8.5"

[workspace]
members = ["src-tauri"]

[dependencies.web-sys]
version = "0.3.19"
features = [
    "console",
    "Window",
    "Document",
    "Element",
    "Node",
]